[gd_scene load_steps=20 format=2]

[ext_resource path="res://MiscCodes/background_script.gd" type="Script" id=1]
[ext_resource path="res://MiscCodes/Tilemap_CameraView.gd" type="Script" id=2]
[ext_resource path="res://MiscCodes/TouchScreenButton.gd" type="Script" id=3]
[ext_resource path="res://MiscCodes/KinematicBody2D.gd" type="Script" id=4]
[ext_resource path="res://kbscene/char.png" type="Texture" id=5]
[ext_resource path="res://pictures/gui/buttons/LeftButton.png" type="Texture" id=6]
[ext_resource path="res://pictures/gui/player_interaction.tres" type="TileSet" id=7]
[ext_resource path="res://pictures/gui/buttons/TopButton.png" type="Texture" id=8]
[ext_resource path="res://pictures/gui/buttons/inventory.png" type="Texture" id=9]
[ext_resource path="res://pictures/gui/buttons/TopButtonPressed.png" type="Texture" id=10]
[ext_resource path="res://pictures/gui/buttons/instellingen2.png" type="Texture" id=11]
[ext_resource path="res://pictures/gui/buttons/crafting_alchemy.png" type="Texture" id=12]
[ext_resource path="res://pictures/gui/buttons/map.png" type="Texture" id=13]
[ext_resource path="res://pictures/gui/buttons/LeftButtonPressed.png" type="Texture" id=14]
[ext_resource path="res://pictures/gui/buttons/quick_item_button.png" type="Texture" id=15]
[ext_resource path="res://base_tilemap/init.gd" type="Script" id=16]
[ext_resource path="res://Sounds/night-chip.ogg" type="AudioStream" id=17]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0

[sub_resource type="CircleShape2D" id=2]

[node name="base_scene" type="Node2D"]
script = ExtResource( 16 )

[node name="background" type="TileMap" parent="."]
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
script = ExtResource( 1 )

[node name="vegetation" type="TileMap" parent="."]
cell_size = Vector2( 32, 32 )
format = 1

[node name="interaction_map" type="TileMap" parent="."]
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
centered_textures = true
format = 1

[node name="player_interaction" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 9371749, 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 705.297, 1197.88 )
current = true
limit_left = 0
limit_top = 0
limit_right = 4800
limit_bottom = 4800
script = ExtResource( 2 )

[node name="Interactive" type="Node2D" parent="Camera2D"]
position = Vector2( -705.297, -1197.88 )

[node name="MiscButtons" type="TouchScreenButton" parent="Camera2D/Interactive"]
visible = false
position = Vector2( 272.559, 948.524 )
scale = Vector2( 13.402, 62.475 )
z_index = 12
normal = ExtResource( 8 )
action = "ui_end"
script = ExtResource( 7 )

[node name="GameButtons" type="Node2D" parent="Camera2D/Interactive"]

[node name="Inventory" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 91.7642, 898.314 )
scale = Vector2( 1.23042, 1.11552 )
z_index = 13
normal = ExtResource( 9 )
action = "inventory_button"

[node name="Crafting" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 1184.49, 1376.73 )
scale = Vector2( 1.23051, 1.07731 )
z_index = 13
normal = ExtResource( 12 )

[node name="Settings" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 1319.96, 1020.83 )
rotation = -3.14158
scale = Vector2( 1.22003, 1.11562 )
z_index = 13
normal = ExtResource( 11 )

[node name="Map" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 88.136, 1376.12 )
scale = Vector2( 1.21844, 1.10424 )
z_index = 13
normal = ExtResource( 13 )

[node name="QuickItems" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
visible = false
position = Vector2( 1130.11, 1096.88 )
scale = Vector2( 1.73434, 1.80493 )
z_index = 13
normal = ExtResource( 15 )

[node name="MoveDown" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 224.332, 1376.07 )
scale = Vector2( 14.9928, 14.9987 )
z_index = 11
normal = ExtResource( 8 )
pressed = ExtResource( 10 )
shape_centered = false
action = "move_down"
visibility_mode = 1
script = ExtResource( 3 )

[node name="MoveRight" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 1183.87, 1024.23 )
scale = Vector2( 16.7497, 5.49206 )
z_index = 11
normal = ExtResource( 6 )
pressed = ExtResource( 14 )
action = "move_right"
visibility_mode = 1
script = ExtResource( 3 )

[node name="MoveUp" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 224.361, 899.343 )
scale = Vector2( 14.9907, 15.5676 )
z_index = 11
normal = ExtResource( 8 )
pressed = ExtResource( 10 )
action = "move_up"
visibility_mode = 1
script = ExtResource( 3 )

[node name="MoveLeft" type="TouchScreenButton" parent="Camera2D/Interactive/GameButtons"]
position = Vector2( 89.342, 1022.54 )
scale = Vector2( 16.8861, 5.52137 )
z_index = 11
z_as_relative = false
normal = ExtResource( 6 )
pressed = ExtResource( 14 )
shape_centered = false
action = "move_left"
visibility_mode = 1
script = ExtResource( 3 )

[node name="dev_statistics" type="MarginContainer" parent="Camera2D"]
margin_left = -615.0
margin_top = -300.0
margin_right = 614.0
margin_bottom = 297.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_stats" type="Label" parent="Camera2D/dev_statistics"]
margin_top = 291.0
margin_right = 1229.0
margin_bottom = 305.0

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 700, 1200 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 5 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )
one_way_collision_margin = 96.0

[node name="MapInteraction" type="TouchScreenButton" parent="Player/CollisionShape2D"]
show_behind_parent = true
position = Vector2( -150, -150 )
scale = Vector2( 15, 15 )
z_index = 11
shape = SubResource( 2 )
action = "map_interaction"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Player"]
pause_mode = 2
stream = ExtResource( 17 )

[node name="Tween" type="Tween" parent="."]
[connection signal="released" from="Camera2D/Interactive/GameButtons/Inventory" to="background" method="_on_Inventory_released"]
[connection signal="pressed" from="Camera2D/Interactive/GameButtons/MoveDown" to="Player" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Camera2D/Interactive/GameButtons/MoveRight" to="Player" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Camera2D/Interactive/GameButtons/MoveUp" to="Player" method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="Player/CollisionShape2D/MapInteraction" to="Player" method="_interaction_process"]
[connection signal="tween_completed" from="Tween" to="Camera2D" method="_on_Tween_tween_completed"]
